diesel_compile_tests/tests/fail/order_requires_column_from_same_table.stderr
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Once`
  --> tests/fail/order_requires_column_from_same_table.rs:20:31
   |
20 |     let source = users::table.order(posts::id);
   |                               ^^^^^ expected `Never`, found `Once`
   |
note: required for `posts::columns::id` to implement `AppearsOnTable<users::table>`
  --> tests/fail/order_requires_column_from_same_table.rs:13:9
   |
13 |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `OrderDsl<posts::columns::id>`
